# terlang

./: .gitignore  from_nfa_to_dfa.cpp
Det/: CMakeLists.txt  main.cpp
Det/Converter/: DSMConverter.cpp
Determinize/: CMakeLists.txt  main.cpp
Determinize/src/: CreateMachine.h  Determinize.h  Machine.cpp  Machine.h
Grammar/: GrammarToDSM  input-1.txt  out1  output-1.csv  picture.dot  right-input-3.txt  right-input-4.txt  right-output-1.csv  right-output-2.csv  right-output-3.csv  right-output-4.csv
GrammarOptimizer/: CMakeLists.txt  main.cpp
GrammarOptimizer/src/: Dictionary.cpp  Dictionary.h  FirstRelation.cpp  FirstRelation.h  GrammarOptimizer.h  Symbol.h
GrammarOptimizer/test/: CMakeLists.txt  GrammarOptimizerTest.cpp
MealyMoore/: CMakeLists.txt  main.cpp
MealyMoore/mock/: inmealy.json  inmealy1.json  inmealy2.json  inmealy3.json  inmealy4.json  inmealyto.json  inmoore.json  inmoore.txt  minmoore.json
MealyMoore/src/: IMachine.h  Machine.cpp  Machine.h  MachineCreator.h  MealyMachine.cpp  MealyMachine.h  MooreMachine.cpp  MooreMachine.h
MyLexer/: CMakeLists.txt  main.cpp
MyLexer/cmake/: AddCatch2.cmake
MyLexer/src/: Lexer.cpp  Lexer.h  LexerReader.h  TokenType.h  TokenUtils.h
MyLexer2/: main.cpp
MyLexer2/src/: CMakeLists.txt  Lexer.cpp  Lexer.h  LexerReader.cpp  LexerReader.h  Token.h  TokenType.h
MyLexer2/test/: CMakeLists.txt  LexerTest.cpp  UtilsTest.cpp  test.txt
Not/: NotDSMToDSM  input-1.csv  input-2.csv  input-3.csv  output-1.csv  output-2.csv  output-3.csv
Regular/: CMakeLists.txt  DFA.cpp  DFA.h  RegexTree.cpp  RegexTree.h  main.cpp
SyntaxAnalizator/: .gitignore  CMakeLists.txt  main.cpp
SyntaxAnalizator/src/: CMakeLists.txt  Token.h  TokenType.h
SyntaxAnalizator/src/Lexer/: Lexer.cpp  Lexer.h  LexerReader.h
SyntaxAnalizator/src/SyntaxAnalizator/: SyntaxAnalizator.cpp  SyntaxAnalizator.h
SyntaxAnalizator/test/: CMakeLists.txt  SyntaxAnalizatorTest.cpp
